--- a/styles/styles.css
+++ b/styles/styles.css
@@ -160,3 +160,72 @@ margin-left: 10%;
   color: white;
   background-color: black;
 }
+
+#media_main_wrapper {
+    width: 800px;
+}
+
+#media_main_body {
+    height: 100%;
+}
+
+#media_main_gMenu {
+    width: 200px;
+    float: left;
+    margin-left: -16px;
+    margin-right: 10px;
+}
+
+#media_main_gMenu ul {
+    width: 100%;
+    height: 100%;
+}
+
+#media_main_gMenu ul li {
+    list-style: none;
+    margin-top: 5px;
+    padding-top: 5px;
+    height: 20px;
+    text-align: center;
+    border: 1px solid black;
+}
+
+#media_main_gMenu ul a {
+    text-decoration: none;
+    color: gray;
+}
+
+#media_main_gMenu ul li:hover {
+    background-color: black;
+}
+
+#media_main_media {
+    width: 535px;
+    border: solid 2px black;
+    float: right;
+    margin: 10px;
+    font-size: 12px;
+}
+
+#media_main_media h2 {
+    margin: 15px;
+    border-left: 3px solid black;
+    border-bottom: 1px solid black;
+    padding-left: 5px;
+}
+
+#media_main_media p {
+    margin: 15px;
+    padding: 5px;
+    border: dashed 1px gray;
+}
+
+#media_main_media p a {
+    text-decoration: none;
+    font-weight: bold;
+    color: black;
+}
+
+#media_main_media p a:hover {
+    color: gray;
+}
