--- a/styles/styles.css
+++ b/styles/styles.css
@@ -171,9 +171,12 @@ margin-left: 10%;
 
 #media_main_gMenu {
     width: 200px;
-    float: left;
+    float: center;
     margin-left: -16px;
     margin-right: 10px;
+	display:table;
+	margin-left:auto;
+	margin-right:auto;
 }
 
 #media_main_gMenu ul {
@@ -228,4 +231,32 @@ margin-left: 10%;
 
 #media_main_media p a:hover {
     color: gray;
+}
+
+.top_bar{
+	height: 20%;
+	width: 100%;
+	padding-top: 5px;
+}
+
+.search_container{
+	width: 71%;
+	margin-left: auto;
+	margin-right: auto;
+	float: left;
+}
+
+.search{
+	border-radius: 5px;
+	border: 1px solid #ccc;
+	padding: 5px;
+	width: 40%;
+	-webkit-transition: all.5s ease;
+	-moz-transition: all.5s ease;
+	transition: all.5s ease;
+	float: right;
+}
+
+.search:focus{
+	width: 200px;
 }
