pages for media files
media pages

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -286,3 +286,35 @@ padding: 30px;
 	width: 200px;
 }
 
+.media_divider
+{
+border-bottom: solid 1px #F6F3F1;
+}
+
+.media_content
+{
+position: relative;
+padding-left: 22px;
+}
+
+td.media_first,th.media_first
+{
+border-left: 0px;
+}
+
+tr.media_rowA
+{
+background: #FFF0DE url('images/trbg1.gif') repeat-x;
+}
+
+tr.media_rowB
+{
+background: #FFFAF4 url('images/trbg2.gif') repeat-x;
+}
+
+.media_date
+{
+font-family: georgia, "times new roman", serif;
+font-size: 20px;
+}
+
