--- a/styles/styles.css
+++ b/styles/styles.css
@@ -150,6 +150,18 @@ margin-left: 10%;
 
 }
 
+
+#register_success {
+display: block;
+float: left;
+text-align: center;
+width: 80%;
+margin-top: 100px;
+margin-left: auto;
+margin-right: auto;
+
+}
+
 input.btn.btn-alt {
 	margin-left: 35%;
 }
