Fixed header background colour

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -40,7 +40,7 @@ header {
 	margin: 0;
 	margin-left: auto;
 	margin-right: auto;
-	background-color: #D8D8D8/* rgba(15, 13, 6, 0.5); */ /*삭제*/	
+	background-color:  rgba(15, 13, 6, 0.5); 	
 }
 
 header:after {
