--- a/styles/styles.css
+++ b/styles/styles.css
@@ -162,6 +162,10 @@ margin-left: 10%;
 
 #sign_in_info {
 float: right;
+font-size: 25px;
+font-size: 25px;
+font-family: museo-300;
+margin-right: 5%;
 }
 
 
