--- a/styles/styles.css
+++ b/styles/styles.css
@@ -130,7 +130,7 @@ nav ul li a:hover {
 	
 
 header img {
-	height: 150px;
+	height: 100%;
 }
 
 
@@ -142,7 +142,6 @@ margin-left: auto;
 margin-right: auto;
 font-size: 25px;
 font-size: 25px;
-font-family: museo-300;
 line-height: 20px;
 text-align: center;
 text-decoration: none;
@@ -164,7 +163,7 @@ margin-left: 10%;
 float: right;
 font-size: 25px;
 font-size: 25px;
-font-family: museo-300;
+font-family: cursive;
 margin-right: 5%;
 }
 
