--- a/styles/styles.css
+++ b/styles/styles.css
@@ -170,6 +170,8 @@ color: white;
 
 #retrieve_password {
 	text-align: center;
+	text-decoration: none;
+	color: black;
 }
 
 
@@ -294,10 +296,6 @@ width: 500px;
 
  span {
  font-size: 12px;
- }
- 
- a {
- text-decoration: none;
  }
  
  
