Changed register success redirection from media page to login page

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -172,7 +172,7 @@ color: white;
 	display: block;
 	text-align: center;
 	text-decoration: none;
-	color: black;
+	color: green;
 }
 
 #error_message {
