Changed colour of welcome message

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -165,7 +165,7 @@ font-size: 20px;
 font-size: 20px;
 font-family: cursive;
 margin-right: 5%;
-color: white;
+color: green;
 }
 
 #retrieve_password {
