--- a/styles/styles.css
+++ b/styles/styles.css
@@ -4,7 +4,7 @@
 body {
 	
 	font-size: 18px;
-	font-family: cursive;
+	font-family: Arial, Helvetica, sans-serif;
 	margin: 0;
 	padding: 0;
 }
@@ -74,7 +74,7 @@ margin: 0;
 margin-bottom: 30px;
 margin-left: auto;
 margin-right: auto;
-text-align: center;
+text-align: left;
 }
 
 
