--- a/styles/styles.css
+++ b/styles/styles.css
@@ -304,6 +304,13 @@ width: 500px;
  font-size: 12px;
  }
  
+ table {
+    border-collapse: collapse;
+}
+ 
+ table, th, td {
+   border: 1px solid black;
+}
  
 .top_bar{
 	height: 20%;
