--- a/styles/styles.css
+++ b/styles/styles.css
@@ -29,6 +29,8 @@ margin-right: auto;
 	display: block;
     text-align: center;
 	margin: 0;
+	margin-top: 10px;
+	margin-bottom: 10px;
 	margin-left: auto;
 	margin-right: auto;
 }
