--- a/styles/styles.css
+++ b/styles/styles.css
@@ -113,6 +113,15 @@ a:hover{
 
 }
 
+
+a.toggle_button {
+    -webkit-appearance: button;
+    -moz-appearance: button;
+    appearance: button;
+    text-decoration: none;
+    color: initial;
+}
+
 /*navigation menu*/
 
 nav li {
