Testing toggle view in image gallery

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -115,9 +115,7 @@ a:hover{
 
 
 a.toggle_button {
-	display: block;
-	margin-left: auto;
-	margin-right: auto;
+	text-align: center;
     -webkit-appearance: button;
     -moz-appearance: button;
     appearance: button;
