--- a/bootstrap-3.3.5-dist/css/bootstrap.css
+++ b/bootstrap-3.3.5-dist/css/bootstrap.css
@@ -2520,6 +2520,7 @@ label {
   max-width: 100%;
   margin-bottom: 5px;
   font-weight: bold;
+  color: white;
 }
 input[type="search"] {
   -webkit-box-sizing: border-box;
