--- a/bootstrap-3.3.5-dist/css/bootstrap.css
+++ b/bootstrap-3.3.5-dist/css/bootstrap.css
@@ -3134,18 +3134,18 @@ fieldset[disabled] .btn-default.active {
 .btn-primary {
   color: black;
   background-color: white;
-  border-color: #2e6da4;
+  border-color: #d3d3d3;
 }
 .btn-primary:focus,
 .btn-primary.focus {
   color: #fff;
-  background-color: #286090;
-  border-color: #122b40;
+  background-color: #d3d3d3;
+  border-color: black;
 }
 .btn-primary:hover {
   color: #fff;
-  background-color: #286090;
-  border-color: #204d74;
+  background-color: #d3d3d3;
+  border-color: black;
 }
 .btn-primary:active,
 .btn-primary.active,
