--- a/bootstrap-3.3.5-dist/css/bootstrap.css
+++ b/bootstrap-3.3.5-dist/css/bootstrap.css
@@ -52,7 +52,8 @@ template {
   display: none;
 }
 a {
-  background-color: transparent;
+  background-color: white;
+  color: #d3d3d3;
 }
 a:active,
 a:hover {
@@ -5876,7 +5877,8 @@ button.list-group-item-danger.active:focus {
   min-height: 20px;
   padding: 19px;
   margin-bottom: 20px;
-  background-color: #f5f5f5;
+  background-color: white;
+  color: black;
   border: 1px solid #e3e3e3;
   border-radius: 4px;
   -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .05);
