changing header bootstrap

--- a/bootstrap-3.3.5-dist/css/bootstrap.css
+++ b/bootstrap-3.3.5-dist/css/bootstrap.css
@@ -4332,8 +4332,10 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 }
 .navbar-brand {
   float: left;
-  height: 50px;
-  padding: 15px 15px;
+  max-height: 50px;
+  max-width: 30%;
+  overflow: visible;
+  padding: 0px 0px;
   font-size: 18px;
   line-height: 20px;
 }
