finalising bootstrap stuff

--- a/bootstrap-3.3.5-dist/css/bootstrap.css
+++ b/bootstrap-3.3.5-dist/css/bootstrap.css
@@ -2523,6 +2523,9 @@ label {
   font-weight: bold;
   color: white;
 }
+.label-inverse {
+	color:black;
+}
 input[type="search"] {
   -webkit-box-sizing: border-box;
      -moz-box-sizing: border-box;
