--- a/bootstrap-3.3.5-dist/css/bootstrap.css
+++ b/bootstrap-3.3.5-dist/css/bootstrap.css
@@ -285,6 +285,7 @@ th {
   font-style: normal;
   font-weight: normal;
   line-height: 1;
+  background-color: white;
   
 
   -webkit-font-smoothing: antialiased;
