--- a/bootstrap-3.3.5-dist/css/bootstrap.css
+++ b/bootstrap-3.3.5-dist/css/bootstrap.css
@@ -21,6 +21,12 @@ body {
   background-color: black !important;
   color: white;
 }
+.bodyAbout {
+ background-image: url(../graphics/logo.png);
+ background-size: 1440px 800px;
+ background-repeat:no-repeat;
+}
+
 article,
 aside,
 details,
