--- a/bootstrap-3.3.5-dist/css/bootstrap.css
+++ b/bootstrap-3.3.5-dist/css/bootstrap.css
@@ -22,7 +22,7 @@ body {
   color: white;
 }
 .bodyAbout {
- background-image: url(../graphics/logo.png);
+ background-image: url(./graphics/logo.png);
  background-size: 1440px 800px;
  background-repeat:no-repeat;
 }
