--- a/bootstrap-3.3.5-dist/css/bootstrap.css
+++ b/bootstrap-3.3.5-dist/css/bootstrap.css
@@ -20,10 +20,14 @@ body {
   margin: 0;
   background-color: black !important;
   color: white;
-  background-image: url(./graphics/logo.png);
-  background-size: 1440px 800px;
-  background-repeat:no-repeat;
 }
+.bodyAbout {
+background-color:white !important;
+ background-image: url(./graphics/logo.png);
+ background-size: 1440px 800px;
+ background-repeat:no-repeat;
+}
+
 article,
 aside,
 details,
