--- a/bootstrap-3.3.5-dist/css/bootstrap.css
+++ b/bootstrap-3.3.5-dist/css/bootstrap.css
@@ -22,10 +22,10 @@ body {
   color: white;
 }
 .bodyAbout {
-background-color:white !important;
+ background-color:white !important;
  background-image: url(./graphics/logo.png);
  background-size: 1440px 800px;
- background-repeat:no-repeat;
+ /*background-repeat:no-repeat;*/
 }
 
 article,
