--- a/bootstrap-3.3.5-dist/css/bootstrap.css
+++ b/bootstrap-3.3.5-dist/css/bootstrap.css
@@ -25,7 +25,7 @@ body {
  background-color:white !important;
  background-image: url(./graphics/logo.png);
  background-size: 1440px 800px;
- /*background-repeat:no-repeat;*/
+ background-repeat:repeat-y;
 }
 
 article,
