--- a/bootstrap-3.3.5-dist/css/bootstrap.css
+++ b/bootstrap-3.3.5-dist/css/bootstrap.css
@@ -23,7 +23,7 @@ body {
 }
 .bodyAbout {
  background-color:white !important;
- background-image: url('graphics/logo.png');
+ background-image: url('../graphics/logo.png');
  background-size: 1440px 800px;
  background-repeat:repeat-y;
 }
