--- a/styles/styles.css
+++ b/styles/styles.css
@@ -24,6 +24,13 @@ margin-left: auto;
 margin-right: auto;
 }
 
+.image_thumbs {
+	height: 150px;
+	width: 100px;
+	border:1px solid #021a40;
+	outline:none;
+}
+
 /*Centres upload forma*/
 .upload_form {
 	display: block;
