--- a/styles/styles.css
+++ b/styles/styles.css
@@ -25,8 +25,8 @@ margin-right: auto;
 }
 
 .image_thumbs {
-	height: 150px;
-	width: 100px;
+	height: 10%;
+	width: 5%;
 	border:1px solid #021a40;
 	outline:none;
 }
