should finish index page

--- a/bootstrap-3.3.5-dist/css/bootstrap.css
+++ b/bootstrap-3.3.5-dist/css/bootstrap.css
@@ -6025,6 +6025,10 @@ button.close {
   position: relative;
   padding: 15px;
 }
+.modal-body-inverse {
+  background-color:black;
+  color: white;
+}
 .modal-footer {
   padding: 15px;
   text-align: right;
