--- a/bootstrap-3.3.5-dist/css/bootstrap.css
+++ b/bootstrap-3.3.5-dist/css/bootstrap.css
@@ -21,7 +21,8 @@ body {
   background-color: black !important;
   color: white;
 }
-.bodyAbout {
+.bodyAbout,
+.bodyMedia {
  background-color:white !important;
  background-image: url('../graphics/logo.png');
  background-size: 1440px 800px;
