changing bootstrap css

--- a/bootstrap-3.3.5-dist/css/bootstrap.css
+++ b/bootstrap-3.3.5-dist/css/bootstrap.css
@@ -4095,8 +4095,9 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   max-width: none;
 }
 .nav-tabs {
-  border-bottom: 1px solid #ddd;
-  background-color: black;
+  border-bottom: 1px solid #000;
+  background-color: white;
+  color: black;
 }
 .nav-tabs > li {
   float: left;
@@ -4109,7 +4110,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   border-radius: 4px 4px 0 0;
 }
 .nav-tabs > li > a:hover {
-  border-color: #eee #eee #ddd;
+  border-color: #000 #000 #fff;
 }
 .nav-tabs > li.active > a,
 .nav-tabs > li.active > a:hover,
@@ -4117,7 +4118,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   color: black;
   cursor: default;
   background-color: #d3d3d3;
-  border: 1px solid #ddd;
+  border: 1px solid #000;
   border-bottom-color: transparent;
 }
 .nav-tabs.nav-justified {
