--- a/bootstrap-3.3.5-dist/css/bootstrap.css
+++ b/bootstrap-3.3.5-dist/css/bootstrap.css
@@ -21,6 +21,10 @@ body {
   background-color: black !important;
   color: white;
 }
+.body {
+ background-color:black !important;
+ color: white;
+}
 .bodyAbout,
 .bodyMedia {
  background-color:white !important;
