--- a/bootstrap-3.3.5-dist/css/bootstrap.css
+++ b/bootstrap-3.3.5-dist/css/bootstrap.css
@@ -5915,6 +5915,17 @@ button.list-group-item-danger.active:focus {
   -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .05);
           box-shadow: inset 0 1px 1px rgba(0, 0, 0, .05);
 }
+.well-inverse {
+  min-height: 20px;
+  padding: 19px;
+  margin-bottom: 20px;
+  background-color: black;
+  color: white;
+  border: 1px solid #e3e3e3;
+  border-radius: 4px;
+  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .05);
+          box-shadow: inset 0 1px 1px rgba(0, 0, 0, .05);
+}
 .well blockquote {
   border-color: #ddd;
   border-color: rgba(0, 0, 0, .15);
